refactor: package location sorted by domain modeling